# control-orogen-trajectory_follower

./: CMakeLists.txt  TrajectoryFollowerTypes.hpp  manifest.xml  trajectory_controller.orogen  trajectory_follower.orogen
scripts/: replay.rb  test_config.yml
tasks/: CMakeLists.txt  PoseWatchdog.cpp  PoseWatchdog.hpp  Task.cpp  Task.hpp  TestSinTrajectoryTask.cpp  TestSinTrajectoryTask.hpp  TrajectoryConverter.cpp  TrajectoryConverter.hpp  TurnVelocityToSteerAngleTask.cpp  TurnVelocityToSteerAngleTask.hpp
