include(trajectory_controllerTaskLib)
ADD_LIBRARY(${TRAJECTORY_CONTROLLER_TASKLIB_NAME} SHARED 
    ${TRAJECTORY_CONTROLLER_TASKLIB_SOURCES})

add_dependencies(${TRAJECTORY_CONTROLLER_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${TRAJECTORY_CONTROLLER_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${TRAJECTORY_CONTROLLER_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${TRAJECTORY_CONTROLLER_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${TRAJECTORY_CONTROLLER_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${TRAJECTORY_CONTROLLER_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${TRAJECTORY_CONTROLLER_TASKLIB_HEADERS}
    DESTINATION include/orocos/trajectory_controller)

